Change groovy to 3.0.3