@@ -40,8 +40,8 @@ tasks.withType(JavaCompile).each {
 }
 
 tasks.withType(GroovyCompile) {
-    sourceCompatibility = JavaVersion.VERSION_14
-    targetCompatibility = JavaVersion.VERSION_14
+    it.options.compilerArgs.add('--enable-preview')
+
 }
 
 [bootJar, bootRun, bootDistTar, bootDistZip, distTar, distZip]*.enabled = false
@@ -117,7 +117,6 @@ dependencies {
     implementation("com.google.code.gson:gson:${versions.gsonVersion}")
     implementation("org.springdoc:springdoc-openapi-webflux-ui:${versions.springdocOpenapiVersion}")
 
-    testImplementation 'org.codehaus.groovy:groovy-all:3.0.4-SNAPSHOT'
 
     testImplementation("org.spockframework:spock-core:${versions.spockVersion}")
     testImplementation("org.spockframework:spock-spring:${versions.spockVersion}")
